# gym-booking-bot

./: .gitignore  .pre-commit-config.yaml  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: cicd.yaml
lambda/booking_lambda/: class_mapper.json  index.py  requirements.txt
lambda/bot_lambda/: class_mapper.json  index.py
telegram_bot/: telegram_bot_stack.py
tests/unit/: test_telegram_bot_stack.py
